--- a/sales.html
+++ b/sales.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Pat's Salmon Cookies | Sales</title>
+  <title>Salmon Cookies | Sales</title>
   <link rel="stylesheet" type="text/css" href="styles/sales.css">
   <link rel="icon" type="image/png" href="resources/salmon.png">
 </head>
 <body>
   <header>
-    <h1>Pat's Cookies Sales Data</h1>
+    <h1>Cookies Sales Data</h1>
   </header>
   <main>
     <section id="forms">
