--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav id="topMenu">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="sales.html">Sales</a></li>
+        <li><a href="2index.html">Sales</a></li>
       </ul>
     </nav>
   </header>
@@ -70,15 +70,15 @@
           <ul>
             <li>Address: 2901 3rd Ave #300, Seattle, WA 98121</li>
             <li>Hours: 6am-7pm</li>
-            <li>Contact: 1-555-373-9788</li>
+            <li>Contact: 1-222-567-9788</li>
           </ul>
         </div>
         <div>
           <h4>Tokyo</h4>
           <ul>
-            <li>Address: Japan, 〒131-0045 Tokyo, Sumida City, Oshiage, 1 Chome−1−2 東京スカイツリータウン・ソラマチ イーストヤード4F 9番地</li>
+            <li>Address: Japan,  China  </li>
             <li>Hours: 6am-7pm</li>
-            <li>Contact: 1-555-492-9344</li>
+            <li>Contact: 1-444-221-9344</li>
           </ul>
         </div>
         <div>
@@ -86,15 +86,15 @@
           <ul>
             <li>Address: Atlantis The Palm - Crescent Rd - Dubai - United Arab Emirates</li>
             <li>Hours: 6am-7pm</li>
-            <li>Contact: 1-555-395-0183</li>
+            <li>Contact: 1-777-847-0183</li>
           </ul>
         </div>
         <div>
           <h4>Paris</h4>
           <ul>
-            <li>Address: 95 Boulevard Berthier, 75017 Paris, France</li>
+            <li>Address: 95 Boulevard Berthier, 75017 new york </li>
             <li>Hours: 6am-7pm</li>
-            <li>Contact: 1-555-324-0680</li>
+            <li>Contact: 1-888-287-0680</li>
           </ul>
         </div>
         <div>
@@ -102,7 +102,7 @@
           <ul>
             <li>Address: Olimpo, Los Olivos 15306, Peru</li>
             <li>Hours: 6am-7pm</li>
-            <li>Contact: 1-555-964-1528</li>
+            <li>Contact: 1-999-5678-1528</li>
           </ul>
         </div>
       </article>
