--- a/2index.html
+++ b/2index.html
@@ -41,6 +41,6 @@
       <article id="tableArticle"></article>
     </section>
   </main>
-  <script src='app.js' type='text/javascript'></script>
+  <script src='the.js' type='text/javascript'></script>
 </body>
 </html>
